<resources>
    <string name="app_name">QQQ</string>
    <string name="prompt_email">QQQ号/手机号/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_forget">忘记密码?</string>
    <string name="action_registered">新用户</string>
    <string name="action_sign_in">立即登录</string>
    <string name="action_sign_up">立即注册</string>
    <string name="title_activity_signup">注册</string>
    <string name="title_activity_signin">登录</string>
    <!--<string name="error_invalid_email">邮箱地址错误</string>-->
    <!--<string name="error_invalid_password">密码太短</string>-->
    <!--<string name="error_incorrect_password">密码格式错误</string>-->
</resources>
