<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".registered">



    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#d2d0fe">

    <Button
        style="?android:textAppearanceSmall"
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textColor="#ffffffff"
        android:layout_marginLeft="0dp"
        android:background="@drawable/shape"
        android:textSize="18dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_registered"
        android:textSize="15dp"
        android:textColor="#3f51b4"
        android:clickable="false"
        android:contextClickable="false"
        android:longClickable="false"
        android:layout_gravity="right"
        android:allowUndo="false"
        android:backgroundTintMode="multiply"
        android:background="#00000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_forget"
        android:textSize="15dp"
        android:background="#00000000"
        android:textColor="#3f51b4"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_weight="0.31"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:maxLines="1"
        android:singleLine="true"
        android:textIsSelectable="false"
        android:layout_weight="0.24"
        android:inputType="textEmailAddress"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:gravity="center_horizontal" />

</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3f51b3">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageButton"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:background="#00000000"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/title_activity_signin"
            android:textSize="25dp"
            android:textColor="#ffffffff"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageButton" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>