<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".registered">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="#d2d0fe">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_signup"
                android:textSize="50dp"
                android:layout_centerHorizontal="true"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:singleLine="true"
                android:textIsSelectable="false"
                android:layout_weight="0.24"
                android:inputType="textEmailAddress|number|phone"
                android:layout_y="100dp"
                android:layout_marginTop="101dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_weight="0.31"
                android:layout_y="150dp"
                android:layout_below="@+id/email"
                android:layout_alignStart="@+id/email" />

            <Button
                style="?android:textAppearanceSmall"
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:textColor="#ffffffff"
                android:layout_marginLeft="0dp"
                android:background="@drawable/shape"
                android:textSize="18dp"
                android:layout_below="@+id/password"
                android:layout_alignStart="@+id/password" />
        </RelativeLayout>





</android.support.design.widget.CoordinatorLayout>
